--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -71,7 +71,8 @@ display: none;
 
 
 <body>
-
+<h3><a href="index.html">collateralify</a></h3>
+<h3><a href="create_nft_loan_form.html">collateralify</a></h3>
 <p id="contract_address_ID" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; font-weight:200; position:absolute; top:35; left:0;"></p>		
 <p id="contract_token_id" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; font-weight:200; position:absolute; top:55; left:0;"></p>
 <p id="contract_loan" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; font-weight:200; position:absolute; top:75; left:0;"></p>
