--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -71,8 +71,8 @@ display: none;
 
 
 <body>
-<h3><a href="index.html">collateralify</a></h3>
-<h3><a href="create_nft_loan_form.html">collateralify</a></h3>
+<h2 style="color:grey; font-family: helvetica narrow, sans-serif;">collateralify</h2>
+<h3 style="color:grey; font-family: helvetica narrow, sans-serif;"><a href="create_nft_loan_form.html">Get a Loan</a></h3>
 <p id="contract_address_ID" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; font-weight:200; position:absolute; top:35; left:0;"></p>		
 <p id="contract_token_id" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; font-weight:200; position:absolute; top:55; left:0;"></p>
 <p id="contract_loan" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; font-weight:200; position:absolute; top:75; left:0;"></p>
@@ -81,8 +81,8 @@ display: none;
 <p id="latest_block" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; font-weight:200; position:absolute; top:135; left:0;"></p>
 
 <div id=category121w83>		
-<input type="button" value="Lend" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; left:0;" onClick="create_obligation()"/>
-<input type="button" value="transfer to lender" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:40; left:0;" onClick="transfer_to_lender()"/>
+<input type="button" value="Lend" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:60; left:0;" onClick="create_obligation()"/>
+<input type="button" value="transfer to lender" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:75; left:0;" onClick="transfer_to_lender()"/>
 
 <input type="text" id="password" name="password" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; left:65;">	
 
