--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -924,7 +924,7 @@ var display = (async function(){
 	newDiv.id = 'w'+i;
 	chat.appendChild(newDiv);
 	
-	document.getElementById("w" + i).innerHTML = "latest block: " latest;
+	document.getElementById("w" + i).innerHTML = "latest block: " + latest;
 	//document.getElementById("latest_block").innerHTML = latest;
 	console.log(latest)
 	}
