--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -71,7 +71,8 @@ display: none;
 
 
 <body>
-
+<h2 style="color:grey; font-family: helvetica narrow, sans-serif;">collateralify</h2>
+<h3 style="color:grey; font-family: helvetica narrow, sans-serif;"><a href="create_nft_loan_form.html">Get a Loan</a></h3>
 <p id="contract_address_ID" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; font-weight:200; position:absolute; top:35; left:0;"></p>		
 <p id="contract_token_id" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; font-weight:200; position:absolute; top:55; left:0;"></p>
 <p id="contract_loan" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; font-weight:200; position:absolute; top:75; left:0;"></p>
@@ -80,17 +81,16 @@ display: none;
 <p id="latest_block" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; font-weight:200; position:absolute; top:135; left:0;"></p>
 
 <div id=category121w83>		
-<input type="button" value="Lend" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; left:0;" onClick="create_obligation()"/>
-<input type="button" value="transfer to lender" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:40; left:0;" onClick="transfer_to_lender()"/>
+<input type="button" value="Lend" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:90; left:0;" onClick="create_obligation()"/>
+<input type="button" value="transfer to lender" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:135; left:0;" onClick="transfer_to_lender()"/>
 
-<input type="text" id="password" name="password" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; left:65;">	
+<input type="text" id="password" name="password" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:90; left:65;">	
+
+
 </div>
-<div id=category121w83>
-<input type="text" id="user_name1" name="user_name1" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:195;">		
-<input type="text" id="user_name" name="user_name" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:105;">		
 
 
-<input type="text" id="NFT_contract" name="NFT_contract" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:50; right:35;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:50; right:30;">contract address</label>
+<input type="text" id="NFT_contract" name="NFT_contract" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:50; right:35;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:50; right:30;">contract token ID</label>	
 <input type="text" id="NFT_Token_ID" name="NFT_Token_ID" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:75; right:35;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:75; right:30;">contract token ID</label>		
 <input type="text" id="loan_amount" name="loan_amount" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:100; right:35;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:100; right:30;">Loan Amount</label>
 <input type="text" id="loan_term" name="loan_term" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:125; right:35;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:125; right:30;">Loan Term</label>
@@ -98,7 +98,7 @@ display: none;
 <input type="button" value="approve" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:160; right:15;" onClick="to_approve()"/>	
 <input type="button" value="loan request" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:190; right:15;" onClick="loan_request()"/>
 <input type="button" value="reclaim asset" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:220; right:15;" onClick="reclaim_asset()"/>	
-<input type="button" value="display loan info" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; right:15;" onClick="display_loan_info()"/>	
+
 </div>
 <div id=category121w82>	
 <input type="button" value="Show Answers" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large;" onClick="prompt_approve()"/>	
@@ -237,6 +237,19 @@ const abi = [
 		],
 		"name": "Transfer",
 		"type": "event"
+	},
+	{
+		"inputs": [],
+		"name": "Address_listCount",
+		"outputs": [
+			{
+				"internalType": "uint256",
+				"name": "",
+				"type": "uint256"
+			}
+		],
+		"stateMutability": "view",
+		"type": "function"
 	},
 	{
 		"inputs": [],
@@ -807,7 +820,7 @@ const abi = [
 	localStorage.setItem("Loan Amount", document.getElementById("loan_amount").value);
 	localStorage.setItem("Loan Term", document.getElementById("loan_term").value);
 
-const contract_address = web3.utils.toChecksumAddress("0x1cbcffa0b3d8a7eed549e98a7a4823a55fffa73a")
+const contract_address = web3.utils.toChecksumAddress("0x64cede4c18138742276b917918900800af2198d7")
 
 const contract_bal = new web3.eth.Contract(abi, contract_address);
 
@@ -817,7 +830,8 @@ const account_address = [];
 
 
 
-function display_loan_info(){
+ $(document).ready(function(){
+//function display_loan_info(){
 var display = (async function(){
   
   
@@ -836,47 +850,92 @@ var display = (async function(){
 	
 	
 	
-	const address = await contract_bal.methods.address_list.length.call();
+	const addressCount = await contract_bal.methods.Address_listCount().call();
+	console.log(addressCount);
+	
+	var toAdd = document.createDocumentFragment();
+	for (var i = 0; i<=addressCount; i++){
+	const address = await contract_bal.methods.address_list(i).call();
 	console.log(address);
-	
 	var chat = document.getElementById("contract_address_ID"); // finds the container
-    var x = document.createElement("div");
-    x.textContent = address;
-    chat.appendChild(x);
-	//document.write(address)
-	const contract_ID = await contract_bal.methods.token_contracts_list(address).call();
-	//document.getElementById("contract_address_ID").innerHTML = contract_ID;
+	var newDiv = document.createElement('div');
+	newDiv.id = 'q'+i;
+	chat.appendChild(newDiv);
+	document.getElementById("q" + i).innerHTML = "-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
+	var newDiv = document.createElement('div');
+	newDiv.id = 'r'+i;
+	chat.appendChild(newDiv);
 	
+	//newDiv.textContent = address
+	
+	
+
+	
+    
+	const contract_ID = await contract_bal.methods.token_contracts_list(address).call();
+	document.getElementById("r" + i).innerHTML = "account address: " + address;
+	var newDiv = document.createElement('div');
+	newDiv.id = 'rr'+i;
+	chat.appendChild(newDiv);
+		
 	//document.write(contract_ID)
 	console.log(contract_ID)
+	document.getElementById("rr" + i).innerHTML = "nft contract: " + contract_ID;
 	const tokenID = await contract_bal.methods.tokens_list(address).call();
 	console.log(tokenID)
+	
+	var newDiv = document.createElement('div');
+	newDiv.id = 's'+i;
+	chat.appendChild(newDiv);
+	
+	document.getElementById("s" + i).innerHTML = "nft token id: " + tokenID;
 	//document.getElementById("contract_token_id").innerHTML = tokenID;
 	//document.write(account_address[0])
 	
 	const loan_ = await contract_bal.methods.loan_amount_list(address).call();
 	//document.getElementById("contract_loan").innerHTML = loan_;	
 	console.log(loan_)
+	var newDiv = document.createElement('div');
+	newDiv.id = 't'+i;
+	chat.appendChild(newDiv);
+	
+	document.getElementById("t" + i).innerHTML = "loan amount: " + loan_;
 	
 	const term = await contract_bal.methods.loan_term_list(address).call();
-	document.getElementById("contract_term").innerHTML = term;
+	//document.getElementById("contract_term").innerHTML = term;
 	console.log(term)
+	var newDiv = document.createElement('div');
+	newDiv.id = 'u'+i;
+	chat.appendChild(newDiv);
+	
+	document.getElementById("u" + i).innerHTML = "loan due at block " + term;
 	
 	const obligation = await contract_bal.methods.debt_obligation_list(address).call();
-	document.getElementById("loan_obligation").innerHTML = "Loan is already made is " + obligation;
+	//document.getElementById("loan_obligation").innerHTML = "Loan is already made is " + obligation;
 	console.log(obligation)
+	var newDiv = document.createElement('div');
+	newDiv.id = 'v'+i;
+	chat.appendChild(newDiv);
+	
+	document.getElementById("v" + i).innerHTML = "loan is approved: " + obligation;
 	const lender = await contract_bal.methods.lender_list(address).call();
 	console.log(lender)
 	const latest = await web3.eth.getBlockNumber()
-	document.getElementById("latest_block").innerHTML = latest;
-	console.log(latest)
-  
+	var newDiv = document.createElement('div');
+	newDiv.id = 'w'+i;
+	chat.appendChild(newDiv);
 	
+	document.getElementById("w" + i).innerHTML = "latest block: " + latest;
+	//document.getElementById("latest_block").innerHTML = latest;
+	console.log(latest)
+	}
+  
+	//document.getElementById("thetable").appendChild(toAdd);
 
 //alert(balance)
 
 })()
-}
+        });
 
 function prompt_approve(){
 	web3.eth.abi.encodeFunctionSignature('approve(address,uint256)');
@@ -890,7 +949,7 @@ function getapproved(){
 	var pwdx = localStorage.getItem("mySharedData");
 	var token_nx = localStorage.getItem("mySharedData1");
 	
-	const contract_address = web3.utils.toChecksumAddress("0x1cbcffa0b3d8a7eed549e98a7a4823a55fffa73a")
+	const contract_address = web3.utils.toChecksumAddress("0x64cede4c18138742276b917918900800af2198d7")
   	
 	
 	const contract_bal = new web3.eth.Contract(abi, contract_address);
@@ -933,12 +992,12 @@ var acct = (async function(){
 	localStorage.setItem("Loan Term", document.getElementById("loan_term").value);
 
 	localStorage.setItem("mySharedData", document.getElementById("password").value);
-	localStorage.setItem("mySharedData1", document.getElementById("user_name").value);
-	localStorage.setItem("mySharedData2", document.getElementById("user_name1").value);
+	//localStorage.setItem("mySharedData1", document.getElementById("user_name").value);
+	//localStorage.setItem("mySharedData2", document.getElementById("user_name1").value);
 	
 	var add1x = localStorage.getItem("mySharedData");
-	var add2x = localStorage.getItem("mySharedData2");
-	var token_nx = localStorage.getItem("mySharedData1");
+	//var add2x = localStorage.getItem("mySharedData2");
+	//var token_nx = localStorage.getItem("mySharedData1");
 	var amt = await contract_bal.methods.loan_amount_list(add1x).call();
 	var _amt = parseInt(amt) + 1
 	console.log(amt);
@@ -1120,8 +1179,8 @@ var acct = (async function(){
   //var result = await getAccounts()
 	await window.ethereum.enable();
 	localStorage.setItem("mySharedData", document.getElementById("password").value);
-	localStorage.setItem("mySharedData1", document.getElementById("user_name").value);
-	localStorage.setItem("mySharedData2", document.getElementById("user_name1").value);
+	//localStorage.setItem("mySharedData1", document.getElementById("user_name").value);
+	//localStorage.setItem("mySharedData2", document.getElementById("user_name1").value);
 	
 	localStorage.setItem("NFT Contract", document.getElementById("NFT_contract").value);
 	localStorage.setItem("NFT Token ID", document.getElementById("NFT_Token_ID").value);
@@ -1138,7 +1197,7 @@ var acct = (async function(){
 	var token_nx = localStorage.getItem("mySharedData1");
 	
  	const contract_address1 = web3.utils.toChecksumAddress(nft_k)
-        var _data = new web3.eth.Contract(abi, contract_address).methods.approve("0x1cbcffa0b3d8a7eed549e98a7a4823a55fffa73a", nft_id).encodeABI();
+        var _data = new web3.eth.Contract(abi, contract_address).methods.approve("0x64cede4c18138742276b917918900800af2198d7", nft_id).encodeABI();
         const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         const account = accounts[0];
 	const result = await web3.eth.getTransactionCount(account)
@@ -1159,7 +1218,7 @@ var acct = (async function(){
 
 function getNFT(){
 var my_nft =(async function(){
-const contract_address = await web3.utils.toChecksumAddress("0x1cbcffa0b3d8a7eed549e98a7a4823a55fffa73a")
+const contract_address = await web3.utils.toChecksumAddress("0x64cede4c18138742276b917918900800af2198d7")
 const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 const contract_bal = await new web3.eth.Contract(abi, contract_address);
 const totalSupply = await contract_bal.methods.baseURI().call();
@@ -1191,7 +1250,7 @@ function loan_amount(){
 	
 	var pwdx = localStorage.getItem("mySharedData");
 
-	const contract_address = web3.utils.toChecksumAddress("0x1cbcffa0b3d8a7eed549e98a7a4823a55fffa73a")
+	const contract_address = web3.utils.toChecksumAddress("0x64cede4c18138742276b917918900800af2198d7")
   	
 	
 	const contract_bal = new web3.eth.Contract(abi, contract_address);
@@ -1228,7 +1287,7 @@ function getvalue(n, q){
 	//alert(bal)
 	
 var val = (async function(){
-  const contract_address = await web3.utils.toChecksumAddress("0x1cbcffa0b3d8a7eed549e98a7a4823a55fffa73a")
+  const contract_address = await web3.utils.toChecksumAddress("0x64cede4c18138742276b917918900800af2198d7")
   const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
   const contract_bal = await new web3.eth.Contract(abi, contract_address);
   const bal = await contract_bal.methods.getHashmap(wallet_address, n).call();
@@ -1265,7 +1324,7 @@ function getvalue1(n){
 	//alert(bal)
 	
 var val = (async function(){
-  const contract_address = await web3.utils.toChecksumAddress("0x1cbcffa0b3d8a7eed549e98a7a4823a55fffa73a")
+  const contract_address = await web3.utils.toChecksumAddress("0x64cede4c18138742276b917918900800af2198d7")
   const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
   const contract_bal = await new web3.eth.Contract(abi, contract_address);
   const bal = await contract_bal.methods.getHashmap1(wallet_address, n).call();
@@ -1284,7 +1343,7 @@ if (i > 80){
 
 function send_ether(){
 var nonce = (async function(){
-  	const contract_address = await web3.utils.toChecksumAddress("0x1cbcffa0b3d8a7eed549e98a7a4823a55fffa73a")
+  	const contract_address = await web3.utils.toChecksumAddress("0x64cede4c18138742276b917918900800af2198d7")
   
 	const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	
@@ -1322,7 +1381,7 @@ function setvalue(){
 	
 q = $('input[name=drone]:checked').val();
 var nonce = (async function(){
-  	const contract_address = await web3.utils.toChecksumAddress("0x1cbcffa0b3d8a7eed549e98a7a4823a55fffa73a")
+  	const contract_address = await web3.utils.toChecksumAddress("0x64cede4c18138742276b917918900800af2198d7")
   	const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	
 	
@@ -1365,7 +1424,7 @@ function set_password(){
 	
 q = $('input[name=drone]:checked').val();
 var nonce = (async function(){
-  	const contract_address = await web3.utils.toChecksumAddress("0x1cbcffa0b3d8a7eed549e98a7a4823a55fffa73a")
+  	const contract_address = await web3.utils.toChecksumAddress("0x64cede4c18138742276b917918900800af2198d7")
   	const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	var pwd = document.getElementById("password").value;	
 	
