--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -817,10 +817,10 @@ const abi = [
 		"type": "receive"
 	}
 ]
-	localStorage.setItem("NFT Contract", document.getElementById("NFT_contract").value);
-	localStorage.setItem("NFT Token ID", document.getElementById("NFT_Token_ID").value);
-	localStorage.setItem("Loan Amount", document.getElementById("loan_amount").value);
-	localStorage.setItem("Loan Term", document.getElementById("loan_term").value);
+	//localStorage.setItem("NFT Contract", document.getElementById("NFT_contract").value);
+	//localStorage.setItem("NFT Token ID", document.getElementById("NFT_Token_ID").value);
+	//localStorage.setItem("Loan Amount", document.getElementById("loan_amount").value);
+	//localStorage.setItem("Loan Term", document.getElementById("loan_term").value);
 
 const contract_address = web3.utils.toChecksumAddress("0x64cede4c18138742276b917918900800af2198d7")
 
@@ -837,10 +837,10 @@ const account_address = [];
 var display = (async function(){
   
   
-  localStorage.setItem("mySharedData", document.getElementById("password").value);
+  //localStorage.setItem("mySharedData", document.getElementById("password").value);
     
 	
-	var pwdx = localStorage.getItem("mySharedData");
+	//var pwdx = localStorage.getItem("mySharedData");
 
 	
   	
