--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -71,8 +71,8 @@ display: none;
 
 
 <body>
-<h2 style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; font-weight:200; position:absolute; top:0; left:0;">collateralify</h2>
-<h3 style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; font-weight:200; position:absolute; top:0; left:60;"><a href="create_nft_loan_form.html">Get a Loan</a></h3>
+<h2 style="color:grey; font-family: helvetica narrow, sans-serif; position:absolute; top:0; left:0;">collateralify</h2>
+<h3 style="color:grey; font-family: helvetica narrow, sans-serif; font-weight:200; position:absolute; top:0; left:90;"><a href="create_nft_loan_form.html">Get a Loan</a></h3>
 
 
 </div>
@@ -113,7 +113,7 @@ display: none;
 <!-- </div> -->
 <!-- <div id="content"></div> -->
 
-var pwd = document.getElementById("password").value;
+//var pwd = document.getElementById("password").value;
 
               
 
