--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -72,8 +72,8 @@ display: none;
 
 <body>
 <h2 style="color:grey; font-family: helvetica narrow, sans-serif; position:absolute; top:0; left:0;">collateralify</h2>
-<h3 style="color:grey; font-family: helvetica narrow, sans-serif; font-weight:200; position:absolute; top:0; left:90;"><a href="create_nft_loan_form.html">Get a Loan</a></h3>
-
+<h3 style="color:grey; font-family: helvetica narrow, sans-serif; font-weight:200; position:absolute; top:0; left:150;"><a href="create_nft_loan_form.html">Get a Loan</a></h3>
+<p id="contract_address_ID" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; font-weight:200; position:absolute; top:35; left:0;"></p>
 
 </div>
 
