--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -901,7 +901,7 @@ var display = (async function(){
 	var newDiv = document.createElement('div');
 	var newBtn = document.createElement('button');
 	newBtn.value = "Lend";
-	newBtn.style = "color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; left:0;";
+	//newBtn.style = "color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; left:0;";
 	newBtn.onclick = function(){
 		"create_obligation(" + address + ")";
 		};
