--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -902,7 +902,7 @@ var display = (async function(){
 	var newBtn = document.createElement('input');
 	newBtn.type = "button";
 	newBtn.value = "Lend";
-	newBtn.addEventListener("click", create_obligation(address);)
+	newBtn.addEventListener("click", create_obligation(address))
 	//newBtn.style = "color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; left:0;";
 	
 	newBtn.id = 'b' + i;
