--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -903,7 +903,7 @@ var display = (async function(){
 	newBtn.setAttribute('type', 'button');
 	newBtn.value = "Lend";
 	newBtn.setAttribute('onclick', 'create_obligation(' + "'" + address + "'" +')');
-	newBtn.style = "color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; left:0;";
+	//newBtn.style = "color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; left:0;";
 	
 	newBtn.id = 'b' + i;
 	newDiv.id = 't'+i;
