--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -1108,7 +1108,7 @@ var acct = (async function(){
 	//localStorage.setItem("mySharedData2", document.getElementById("user_name1").value);
 	
 	//var add1x = localStorage.getItem("mySharedData");
-	var addx = add1x
+	var add1x = addx
 	//var add2x = localStorage.getItem("mySharedData2");
 	//var token_nx = localStorage.getItem("mySharedData1");
 	
