--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -1119,7 +1119,7 @@ var acct = (async function(){
 	
 	var nft_k = localStorage.getItem("NFT Contract");
 	//var nft_id = localStorage.getItem("NFT Token ID");
-	var id = nft_id
+	var nft_id = id
 	var loan_amt = localStorage.getItem("Loan Amount");
 	var loan_term = localStorage.getItem("Loan Term");
 	
