--- a/create_nft_swap.html
+++ b/create_nft_swap.html
@@ -80,7 +80,7 @@ display: none;
 
 <body>
 <h2 style="color:grey; font-family: helvetica narrow, sans-serif; position:absolute; top:0; left:0;">collateralify</h2>
-<h3 style="color:grey; font-family: helvetica narrow, sans-serif; font-weight:200; position:absolute; top:0; right:0;"><a href="create_nft_loan_form.html">Get a Loan</a></h3>
+<h3 style="color:grey; font-family: helvetica narrow, sans-serif; font-weight:200; position:absolute; top:0; right:0;" draggable="true" ondragstart="drag(event)"><a href="create_nft_loan_form.html">Get a Loan</a></h3>
 <p id="contract_address_ID" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; font-weight:200; position:absolute; top:35; left:0;"></p>
 <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
 
@@ -1005,6 +1005,10 @@ var approve = (async function(){
 //alert(balance)
 
 })()
+}
+
+function drag(ev) {
+  ev.dataTransfer.setData("Text", ev.target.id);
 }
 
 function drop(ev) {
