--- a/create_nft_swap.html
+++ b/create_nft_swap.html
@@ -891,7 +891,7 @@ var display = (async function(){
 	
 	const contract_ID2 = await contract_bal.methods.token_contracts_list2(address).call();
 	//document.getElementById("contract_loan").innerHTML = loan_;	
-	console.log(loan_)
+	//console.log(loan_)
 	var newDiv = document.createElement('div');
 	//var newBtn = document.createElement('input');
 	//newBtn.setAttribute('type', 'button');
